--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="../New%20folder/projects/portfolio.png" alt="Project 1">
+                        <img src="projects/portfolio.png" alt="Project 1">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Animated Portfolio</h3>
@@ -129,14 +129,6 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
                             <i class="fab fa-js"></i>
                             <span>JavaScript</span>
                         </div>
-                        <!--<div class="skill-item">
-                            <i class="fab fa-react"></i>
-                            <span>React</span>
-                        </div>
-                        <div class="skill-item">
-                            <i class="fab fa-vuejs"></i>
-                            <span>Vue js</span>
-                        </div>-->
                     </div>
                 </div>
                 
@@ -159,10 +151,6 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
                             <i class="fas fa-database"></i>
                             <span>SQLalchemy</span>
                         </div>
-                        <!--<div class="skill-item">
-                            <i class="fas fa-fire"></i>
-                            <span>Firebase</span>
-                        </div>-->
                     </div>
                 </div>
                 
@@ -173,10 +161,6 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
                             <i class="fab fa-figma"></i>
                             <span>Figma</span>
                         </div>
-                        <!--<div class="skill-item">
-                            <i class="fab fa-adobe"></i>
-                            <span>Adobe XD</span>
-                        </div>-->
                         <div class="skill-item">
                             <i class="fas fa-magic"></i>
                             <span>UI/UX</span>
@@ -199,18 +183,6 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
                             <i class="fab fa-github"></i>
                             <span>GitHub</span>
                         </div>
-                        <!--<div class="skill-item">
-                            <i class="fab fa-npm"></i>
-                            <span>npm/yarn</span>
-                        </div>
-                        <div class="skill-item">
-                            <i class="fas fa-terminal"></i>
-                            <span>CLI</span>
-                        </div>
-                        <div class="skill-item">
-                            <i class="fas fa-cloud"></i>
-                            <span>AWS</span>
-                        </div>-->
                     </div>
                 </div>
             </div>
