pic fixed again

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/projects/portfolio.png" alt="Project 1">
+                        <img src="projects/portfolio.png" alt="Project 1">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Animated Portfolio</h3>
