--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Malak Al Ammari</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <link href="styles.css" rel="stylesheet">
 <body>
     <div class="floating-element"></div>
@@ -190,23 +189,23 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
         
         <section class="section" id="contact">
             <h2 class="section-title">Get In Touch</h2>
-            <form class="contact-form" id="contactForm" action="https://formspree.io/f/xpwrzayy" method="get" enctype="text/plain">
+            <form class="contact-form" id="contactForm" method="get" enctype="text/plain">
                 <div id="formMessage" class="form-message"></div>                
                 <div class="form-group">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" id="name" name="name" class="form-input" required disabled>
+                    <input type="text" id="name" name="name" class="form-input" required>
                 </div>
                 <div class="form-group">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" id="email" name="email" class="form-input" required disabled>
+                    <input type="email" id="email" name="email" class="form-input" required>
                 </div>
                 <div class="form-group">
                     <label for="subject" class="form-label">Subject</label>
-                    <input type="text" id="subject" name="subject" class="form-input" required disabled>
+                    <input type="text" id="subject" name="subject" class="form-input" required>
                 </div>
                 <div class="form-group">
                     <label for="message" class="form-label">Message</label>
-                    <textarea id="message" name="message" class="form-textarea" required disabled></textarea>
+                    <textarea id="message" name="message" class="form-textarea" required></textarea>
                 </div>
                 <button type="submit" class="submit-btn" disabled>Send Message</button>
             </form>
@@ -217,6 +216,7 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
             <p class="footer-text">&copy;<span id="currentYear"></span> Malak Al Ammari. All rights reserved.</p>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="script.js"></script>   
 
 </body>
