--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
                     <label for="message" class="form-label">Message</label>
                     <textarea id="message" name="message" class="form-textarea" required></textarea>
                 </div>
-                <button type="submit" class="submit-btn" disabled>Send Message</button>
+                <button type="submit" class="submit-btn" >Send Message</button>
             </form>
         </section>
         
