--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
         
         <section class="section" id="contact">
             <h2 class="section-title">Get In Touch</h2>
-            <form class="contact-form" id="contactForm" method="get" enctype="text/plain">
+            <form class="contact-form" id="contactForm" method="post">
                 <div id="formMessage" class="form-message"></div>                
                 <div class="form-group">
                     <label for="name" class="form-label">Name</label>
