--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@ digital solutions. I thrive on innovation, teamwork, and continuous learning, al
                             <span class="tech-tag">JavaScript</span>
                             <span class="tech-tag">PHP</span>
                         </div>
-                        <!--
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> Code</a>
-                        </div>-->
+                            <a href="https://alammarimalak.github.io/animated_portfolio/" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://github.com/alammarimalak/animated_portfolio" class="project-link"><i class="fab fa-github"></i> Code</a>
+                        </div>
                     </div>
                 </div>
                 
